cropped images to fix margin issues and fixes image aspect ratio issue in header

--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -109,7 +109,7 @@
 }
 
 .gpt3__header-image img{
-    height: 100%;
+    height: auto;
     width: 100%;
     margin: 0;
 }
@@ -121,6 +121,10 @@
 
     .gpt3__header-content {
         margin: 0 0 3rem;
+    }
+
+    .gpt3__header-image img {
+        width: 60%;
     }
 }
 
@@ -147,6 +151,10 @@
     .gpt3__header-content__input button {
         font-size: 16px;
         line-height: 24px;
+    }
+
+    .gpt3__header-image img {
+        width: 100%;
     }
 }
 
